<package>
  <name>bosch_drivers</name>
  <version>0.0.1</version>
  <description>
    Catkinized version of the svn bosch_drivers
  </description>
  <maintainer email="franke@fzi.de">Kai Franke</maintainer>
  <author>Bosch</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>bosch_drivers_common</run_depend>
  <run_depend>raspi_interface</run_depend>
  <run_depend>bmc050_driver</run_depend>
  <run_depend>bmg160_driver</run_depend>
  <run_depend>gpio_driver</run_depend>

  <export>
    <metapackage/>
  </export> 
</package>
