<?xml version="1.0"?>
<package>
  <name>bosch_drivers_common</name>
  <version>0.0.1</version>
  <description>Catkinized version of bosch_drivers_common</description>
  <maintainer email="kai@kaifranke.com">Kai Franke</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  
  <run_depend>roscpp</run_depend>
  
</package>
